docs: swagger docs in user rote
