# src/controller/users/AuthUserController.ts
@@ -7,9 +7,17 @@ class AuthUserController {
 
         const authUserService = new AuthUserService();
 
-        const auth = await authUserService.execute({ email, password });
+        try {
+            const auth = await authUserService.execute({ email, password });
 
-        return res.json(auth);
+            return res.status(200).json(auth);
+        } catch (error) {
+            if (error.status === 422) {
+                return res.status(422).json({ error: error.message });
+            }
+
+            return res.status(500).json({ error: "Internal Error" });
+        }
     }
 }
 
